# DashboardWatch

./: BUILD_INTSTRUCTIONS.txt  CMakeLists.txt  DashboardWatch.cpp  DashboardWatch.h  DashboardWatchConfig.h.in  DashboardWatchLogger.cpp  DashboardWatchLogger.h  README.md  main.cpp  resources.qrc
doc/: FeaturePlan.txt  README.html
